# openfinite

./: .gitignore  CMakeLists.txt  README.md  plan.md
data/: hex_model1.vtu  new.txt  nnut_ae.vtk  pig.off  quad_model1.vtu  tet_model1.vtu  tri_model1.vtu
docs/: FirstKindNedecFiniteElementSpace2d.md  index.md  intergral.md  mesh_tools.md  scaled_monomial_space.md
example/: CMakeLists.txt  parallel_hexmesh_optimization.cpp  parallel_quadmesh_optimization.cpp  parallel_tetmesh_optimization.cpp  parallel_trimesh_optimization.cpp  plot.py  pmesh_generation.cpp  pmesh_hexmesh_generation.cpp  pmesh_tetmesh_generation.cpp  pmesh_trimesh_generation.cpp
include/: Constants.h
include/algebra/: Algebra_kernel.h  Array.h  CMatrix.h  CSRMatrix.h  Eigenvalue.h  Matrix.h  MatrixFactory.h  MatrixType.h  Matrix_1d.h  RMatrix.h  Shape.h  Vector.h  linalg.h
include/functionspace/: FirstKindNedecFiniteElementSpace2d.h  ScaledMonomialSpace2d.h
include/geometry/: Bisection_alg.h  C6.h  C6H6.h  CubeModel.h  CubeWithSpheresModel.h  CubeWithSpheresModelHexMesh.h  GObject.h  Geometry_kernel.h  Level_set_function.h  Operator.h  Origin.h  PPoint.h  PVector.h  Point_2.h  Point_3.h  PolyhedronModel.h  RectangleWithHole.h  RectangleWithTwoHoles.h  SphereModel.h  Vector_2.h  Vector_3.h
include/mesh/: CGALMesher_2.h  CellQualityBase.h  Cell_type.h  ComponentDataArray.h  DataArray.h  DataArrayBase.h  GMesher.h  GhostFillingAlg.h  HalfEdgeMesh.h  HexJacobiQuality.h  HexPositiveJacobiQuality.h  HexahedronMesh.h  HexahedronMeshNew.h  IntervalMesh.h  MaxNodePatchObjectFunction.h  Mesh.h  MeshData.h  MeshFactory.h  MeshGeometry.h  MeshToplogy.h  MixNodePatchObjectFunction.h  NodeData.h  NodePatchObjectFunctionBase.h  NodePatchOptAlg.h  OffsetDataArray.h  OptimizationAlg.h  ParallelMesh.h  ParallelMeshColoringAlg.h  ParallelMeshOptAlg.h  ParallelMesher.h  PolygonMesh.h  QuadJacobiPositiveQuality.h  QuadJacobiQuality.h  QuadPositiveJacobiQuality.h  QuadrilateralMesh.h  SumNodePatchObjectFunction.h  TetRadiusRatioQuality.h  TetrahedronMesh.h  TriRadiusRatioQuality.h  TriangleMesh.h  (+2 more)
include/quadrature/: GaussLegendreQuadrature.h  GaussLegendreQuadratureData.h  HexahedronQuadratrue.h  LineQuadrature.h  PolygonMeshIntegralAlg.h  QuadrangleQuadrature.h  QuadrilateralMeshQuadrature.h  TetrahedronQuadrature.h  TetrahedronQuadratureData.h  TriangleMeshQuadrature.h  TriangleQuadrature.h  TriangleQuadratureData.h
test/: CMakeLists.txt  TestMacro.h.in  test_GaussLegendreQuadrature.cpp  test_HexMesh.cpp  test_InitTop.cpp  test_Matrix.cpp  test_NedecFEM.cpp  test_ScaledMonomialSpace2d.cpp  test_TetrahedronQuadrature.cpp  test_TriangleMesh.cpp  test_TriangleMeshQuadrature.cpp  test_TriangleQuadrature.cpp  test_array.cpp  test_inv.cpp  test_openblas.cpp  test_set.cpp  test_vector.cpp
tutorial/: TriangleMesh_example.cpp
